[gd_scene load_steps=2 format=3 uid="uid://g6djsnyagksj"]

[ext_resource type="Script" path="res://game/interface/pause_menu/pause_menu.gd" id="1_6aj5i"]

[node name="pause_menu" type="Node2D"]
script = ExtResource("1_6aj5i")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 184.0
offset_top = 85.0
offset_right = 1045.0
offset_bottom = 574.0
color = Color(0.780392, 0.607843, 0.376471, 1)

[node name="contents" type="VBoxContainer" parent="."]
offset_left = 380.0
offset_top = 152.0
offset_right = 842.0
offset_bottom = 482.0

[node name="Label" type="Label" parent="contents"]
layout_mode = 2
text = "Pause Menu

"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="contents"]
layout_mode = 2

[node name="resume" type="Button" parent="contents/VBoxContainer"]
layout_mode = 2
text = "Return To Game"

[node name="load_game" type="Button" parent="contents/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="save_game" type="Button" parent="contents/VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="options" type="Button" parent="contents/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="debug_menu" type="Button" parent="contents/VBoxContainer"]
layout_mode = 2
text = "Debug Menu"

[node name="exit_game" type="Button" parent="contents/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="contents/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="contents/VBoxContainer/load_game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="contents/VBoxContainer/save_game" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="contents/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="contents/VBoxContainer/debug_menu" to="." method="_on_debug_menu_pressed"]
[connection signal="pressed" from="contents/VBoxContainer/exit_game" to="." method="_on_exit_game_pressed"]
